force-app/main/default/objects/Resource_Category__c.object
<CustomObject>
    <fields>
        <fullName>Diversity_Fields__c</fullName>
        <label>Diversity Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Collection__c</fullName>
        <label>Resource Collection</label>
        <referenceTo>Resource_Collection__c</referenceTo>
        <relationshipLabel>Resource Categories</relationshipLabel>
        <relationshipName>Resource_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Select_Preferred_Based_On_Diversity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select Preferred Based On Diversity</label>
        <type>Checkbox</type>
    </fields>
    <label>Resource Category</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>